--- a/src/app/ConversationComponents/dialog/dialog.component.scss
+++ b/src/app/ConversationComponents/dialog/dialog.component.scss
@@ -2,11 +2,13 @@ body { margin: 0; }
 #addUserForm{position: absolute; }
 #sidebar, #content, #Sending { position: absolute; }
 #sidebar, #content, #Sending { overflow: auto; padding: 10px; }
+
+$blue: #94C2ED;
+
 #sidebar {
-  min-width:220px;
-  max-width: 15vw;
+ width:220px;
  top: 10%; /* Расстояние от верхнего края */
- bottom: 25%; /* Расстояние снизу  */
+ bottom: 0; /* Расстояние снизу  */
  background: #708090;
  ul{
    left:0px;
@@ -16,6 +18,7 @@ body { margin: 0; }
  top: 10%; /* Расстояние от верхнего края */
  left: 220px; /* Расстояние от левого края */
  bottom: 25%; right: 0%;
+ min-width: 800px;
 }
 
 .dialog {
@@ -40,8 +43,9 @@ body { margin: 0; }
 
 #Sending {
   top:75%;
-  width:100%;
+  left: 220px;
   height: 25%;
+  right: 0;
   display: flex;
   border-top: 10px solid #231F20;
     background: #B0C4DE;
@@ -49,9 +53,35 @@ body { margin: 0; }
 }
 
 #Sending form{
-  margin-left: 30vw;
-  min-width: 600px;
-  max-width: 900px;
+  margin-left: 15vh;
+  min-width: 700px;
+  max-width: 100%;
+}
+
+textarea {
+      width: 100%;
+      border: none;
+      padding: 10px 20px;
+      font: 14px/22px "Lato", Arial, sans-serif;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      resize: none;
+
+    }
+
+#Sending button {
+    float: right;
+    color: $blue;
+    font-size: 16px;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    background: #F2F5F8;
+
+    &:hover {
+        color: darken($blue, 7%);
+  }
 }
 
 .all-images
