--- a/src/app/userpage2/userpage2.component.html
+++ b/src/app/userpage2/userpage2.component.html
@@ -164,7 +164,7 @@
                                             </div>
                                         </div>
                                         <div class="notif-buttons mt-2">
-                                            <a><button type="button b" class="btn btn-success mr-2" (click)="onAccept(not)">Принять</button></a>
+                                            <a routerLink="/myorders"><button type="button b" class="btn btn-success mr-2" (click)="onAccept(not)">Принять</button></a>
                                             <button type="button" class="btn btn-warning mr-2" (click)="onReject(not)">Отклонить</button>
                                             <button  type="button" class="btn btn-success" ><a href="/adv/{{not.advertisementId}}" class="ft">Поднобнее</a></button>
                                             </div>
