--- a/src/app/admin/change-user-properties/change-user-properties2.component.html
+++ b/src/app/admin/change-user-properties/change-user-properties2.component.html
@@ -16,7 +16,7 @@
             <img *ngIf="user.userImageKey!=undefined" src="http://localhost:1234/getuserimg/{{user.userImageKey}}" alt="profile_pic" style="width:70px; height:70px; border-radius:50%;">
             <img  *ngIf="user.userImageKey==undefined" src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" alt="profile_pic" style="width:55px">
             <div class="name"> {{user.firstname}} {{user.lastname}}</div>
-            <div>{{user.role.roleName}}</div>
+            <div>{{getRole(user.role.roleName)}}</div>
         </div>
         <div class="part2">
            <div class="tools">
@@ -25,8 +25,8 @@
            <div class="data mt-3">
                <div><span>Почта - </span>{{user.email}}</div>
                <div><span>Дата рождения - </span>{{user.birthDate.split('T')[0]}}</div>
-               <div><span> Пол- </span>{{user.gender}}</div>
-               <div><span> Статус - </span>{{user.IsActivate}}</div>
+               <div><span> Пол- </span>{{getGender(user.gender)}}</div>
+               <div><span> Статус - </span>{{getStatus(user.IsActivate)}}</div>
             </div>
         </div>
     </div>      
@@ -38,10 +38,10 @@
           <div class="container">
               <div class="row d-flex flex-column justify-content-center  align-items-center">
                 <div class="form-group" >
-                  <label for="exampleInputEmail1">Активировать</label>
+                  <label for="exampleInputEmail1">Аккаунт</label>
                  <select  formControlName="userIsActivate" class="custom-select">
-                   <option value="true">Да</option>
-                   <option value="false">Нет</option>
+                   <option value="true">Активный</option>
+                   <option value="false">Неактивный</option>
                 </select>
                 </div>
             <div class="form-group" >
