--- a/src/app/admin/user-document-item/user-document-item.component.html
+++ b/src/app/admin/user-document-item/user-document-item.component.html
@@ -13,8 +13,8 @@
            <h4 сlass="title">Документы и Сертификаты </h4>
         </div>
         <div class="documents mt-1">
-            <span *ngFor="let doc of user.documents; let i = index" class="document mr-2">
-                    <span style="text-align:center;"><i style="font-size:30px;" class="fas fa-download"></i></span>
+            <span  *ngFor="let doc of user.documents; let i = index" class="document mr-2">
+                    <span (click)="download(doc.documentKey)" style="text-align:center;"><i style="font-size:30px;" class="fas fa-download"></i></span>
                     <section class="example-section">
                         <mat-checkbox class="example-margin" (click)="getDoc()" [(ngModel)]="doc.isValid">{{doc.documentKey.split('_')[1]}}</mat-checkbox>
                     </section>
