--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
                 <a  *ngIf="isAdmin" mat-raised-button сlass="m-2" routerLink="/admin/allDocuments">Документы</a>
                 <a  *ngIf="isAdmin" mat-raised-button class="ml-2" routerLink="/admin/rolecontrol">Роли</a>
                 <a  *ngIf="isAdmin" mat-raised-button  class="ml-2"routerLink="/admin/subjectcontrol">Предметы</a>
-               
+
             </div>
               <div class="navbar-auth" *ngIf="!isLogin">
                   <a mat-raised-button class="mr-4" routerLink="/signin">Войти</a>
@@ -17,9 +17,10 @@
                 <p class="mr-4 notification">
                     <mat-icon (click)="getMyAllNotifications()" class="userInfo cursor mr-4" data-toggle="modal" data-target="#notificationModal"  matBadge={{countNot}} matBadgeColor="warn">notifications</mat-icon>
                     <mat-icon class="userInfo cursor mr-4" routerLink="/dialogsList" matBadge={{count}} matBadgeColor="warn">mail</mat-icon>
-                    <mat-icon class="userInfo cursor mr-4" routerLink="/friends" matBadge={{friendsNot}} matBadgeColor="warn">account_circle</mat-icon>
+                    <mat-icon class="userInfo cursor mr-4" (click)="getFriendsNot()" data-toggle="modal" data-target="#friendsNotificationModal" matBadge={{friendsNot}} matBadgeColor="warn">account_circle</mat-icon>
                     <mat-icon class="userInfo cursor" routerLink="/groupList" matBadge={{groupsNot}} matBadgeColor="warn">people</mat-icon>
                 </p>
+                <a mat-raised-button class="mr-2" routerLink="/friends">Друзья</a>
                 <a *ngIf="!isAdmin" mat-raised-button class="mr-2" routerLink="/myorders" >Мои заказы</a>
                  <a *ngIf="!isAdmin" mat-raised-button class="mr-2" routerLink="/myadvertisements" >Мои объявления</a>
                   <a mat-raised-button class="mr-2" routerLink="/signin" (click)="Logout()">Выход</a>
@@ -28,8 +29,8 @@
         </div>
       </nav>
       </div>
-    
-    
+
+
     <div  class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
@@ -45,3 +46,18 @@
           </div>
         </div>
       </div>
+      <div  class="modal fade" id="friendsNotificationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Заявки в друзья</h5>
+                <button type="button"  class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body p-0 m-0">
+                <app-friends-notifications (deleteNot)="deleteFriendsNot($event)" [(notifications)]="friendsNotifications"></app-friends-notifications>
+              </div>
+            </div>
+          </div>
+        </div>
