--- a/src/app/admin/subject-control/subject-control.component.scss
+++ b/src/app/admin/subject-control/subject-control.component.scss
@@ -1,19 +1,20 @@
 th
 {
     text-align:center !important; 
+    margin-right:10px;
 }
 
 td 
 {
     text-align:center !important; 
+    margin-right:10px;
 }
 table {
-    min-width:88%;
+   min-width:40vw;
   }
 
   .mat-form-field {
     font-size: 14px;
-    width: 100%;
   }
 
   .subject-container-prop
