--- a/src/app/allusers/advertisement/advertisement.component.html
+++ b/src/app/allusers/advertisement/advertisement.component.html
@@ -20,12 +20,19 @@
                                     </div>
                                 </div>
                                 <div *ngIf="isUserAdv" class="prop d-flex justify-content-end w-100 edit">
+                                    <p (click)="changeAdvStatus()" *ngIf="adv.status=='ACTIVE'" class="mr-4">
+                                      <i class="fas fa-lock"></i>
+                                    </p>
+                                    <p (click)="changeAdvStatus()" class="mr-4" *ngIf="adv.status=='ARCHIVED'">
+                                      <i class="fas fa-lock-open"></i>
+                                    </p>
                                     <p data-toggle="modal" class="mr-4" data-target="#exampleModalCenter" >
                                         <i class="fas fa-edit"></i>
                                     </p>
                                      <p>  
                                         <i class="fas fa-camera"></i>
                                     </p>
+                                   
                                    </div>
                                 {{adv.advertisementName}}                            
                             </div>
