--- a/src/app/allusers/advertisement/advertisement.component.html
+++ b/src/app/allusers/advertisement/advertisement.component.html
@@ -11,8 +11,11 @@
                                     <div *ngIf="!isUserAdv" class="userName">
                                       <a routerLink="../../userPage/{{adv.authorId}}">{{adv.firstName}} {{adv.surName}}</a> 
                                     </div>
-                                    <p *ngIf="!isUserAdv && can" data-toggle="modal" data-target="#RequestModel1">
+                                    <p *ngIf="!isUserAdv && can && role!='ROLE_ADMIN'" data-toggle="modal" data-target="#RequestModel1">
                                         <i class="far fa-handshake h2"></i>
+                                    </p>
+                                    <p *ngIf="role=='ROLE_ADMIN'" data-toggle="modal" data-target="#deleteModalCenter" >
+                                      <i class="fas fa-trash-alt"></i>
                                     </p>
                                     <div *ngIf="order">
                                       <p  class="order-status m-0">статус заказа - {{order.status}}</p>
@@ -95,9 +98,28 @@
   </div>
 
 
- 
-  
-  
+  <div class="modal fade" id="deleteModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <span><b>Напишите причину удаления</b></span>
+            <form  [formGroup]="service.getDeleteForm()">
+              <textarea  class="mt-3" formControlName="comment" type="text" class="form-control" id="Input2" rows="5" aria-describedby="emailHelp" placeholder="Комментарий"></textarea>
+            </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Отменить</button>
+          <button type="button" (click)="deleteAdvertisement()" class="btn btn-primary">Удалить</button>
+        </div>
+      </div>
+      
+  </div>
+
   <div class="modal fade" id="RequestModel1" tabindex="-1" role="dialog" aria-labelledby="RequestModal1Label" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -108,6 +130,6 @@
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Отменить</button>
           <button type="button" (click)="sendNotification()" class="btn btn-primary">Отправить</button>
         </div>
-      </div>
+        </div>
     </div>
   </div>
