--- a/src/app/allusers/notifications/notifications.component.html
+++ b/src/app/allusers/notifications/notifications.component.html
@@ -2,7 +2,7 @@
 	<div class="notification_wrap w-100">
 		<div class="dropdown active w-100">
 				<div *ngFor="let not of notifications; let i = index">
-					<div *ngIf="not.notification.type!='ACCEPTED_CERTIFICATION' && not.notification.type!='REJECTED_CERTIFICATION'">
+					<div *ngIf="not.notification.type!='DELETE_ADVERTISEMENT' && not.notification.type!='ACCEPTED_CERTIFICATION' && not.notification.type!='REJECTED_CERTIFICATION'">
 						<div class="notify_item"  >
 							<div *ngIf="not.notification.userImageKey!=undefined" class="notify_img">
 								<img src="http://localhost:1234/getuserimg/{{not.notification.userImageKey}}" alt="profile_pic" style="width:70px; height:70px; border-radius:50%;">
@@ -22,6 +22,19 @@
 							<button  type="button" class="btn btn-success ml-2 " ><a href="/adv/{{not.notification.advertisementId}}" class="ft">O заказе</a></button>
 						</div>
 					</div>
+					<div *ngIf="not.notification.type=='DELETE_ADVERTISEMENT'">
+						<div class="notify_item"  >
+							<div  class="notify_img">
+								<img src="https://conquestimaging.com/wp-content/uploads/2018/03/cs.png" alt="profile_pic" style="width:55px">
+							</div>
+							<div class="notify_info">
+								<p>{{not.notification.message}}</p>
+								<span class="notify_time"></span>
+							</div>
+						</div>
+						<div class="all">			
+						</div>
+					</div>
 					<div *ngIf="not.notification.type=='ACCEPTED_CERTIFICATION' || not.notification.type=='REJECTED_CERTIFICATION'">
 						<div class="notify_item"  >
 							
@@ -29,12 +42,11 @@
 								<img src="https://conquestimaging.com/wp-content/uploads/2018/03/cs.png" alt="profile_pic" style="width:55px">
 							</div>
 							<div class="notify_info">
-								<p>Адинистратор {{not.notification.message}}<span>{{not.notification.certificateName.split('_')[1]}}</span></p>
+								<p>{{not.notification.message}}</p><span>{{not.notification.certificateName.split('_')[1]}}</span>
 								<span class="notify_time"></span>
 							</div>
 						</div>
-						<div class="all">
-							
+						<div class="all">			
 						</div>
 					</div>
 						
