--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -34,12 +34,12 @@
                 </div>
             </div>
             <div class="col-md-4 col-sm-12">
-                <label for="example-date-input">Дата рождения</label>
+                <label for="example-date-input"><b>Дата рождения</b></label>
                 <input class="form-control" formControlName="birthDate" type="date" value="" id="example-date-input">
             </div>
             <div class="col-md-4 col-sm-12">
                 <div class="form-group" >
-                    <label for="exampleInputEmail1">Email</label>
+                    <label for="exampleInputEmail1"><b>Email</b></label>
                     <input type="text" formControlName="userEmail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
                     <div class="registration-field"
                         *ngIf="regService.getRegForm().controls['userEmail'].invalid && regService.getRegForm().controls['userEmail'].touched">  
@@ -51,7 +51,7 @@
             <div class="col-md-4 col-sm-12">
             <div formGroupName="Passwords" class="passwords">
                 <div class="form-group" >
-                    <label for="exampleInputEmail1">Пароль</label>
+                    <label for="exampleInputEmail1"><b>Пароль</b></label>
                     <input type="password" formControlName="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Пароль">
                     <div class="registration-field"
                     *ngIf="regService.getRegForm().controls['Passwords'].controls['password'].invalid && regService.getRegForm().controls['Passwords'].controls['password'].touched">  
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="form-group" >
-                    <label for="exampleInputEmail1">Пароль</label>
+                    <label for="exampleInputEmail1"><b>Повторите Пароль</b></label>
                     <input type="password" formControlName="confirmPassword" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Пароль">
                     <div class="registration-field"
                         *ngIf="regService.getRegForm().controls['Passwords'].controls['confirmPassword'].invalid && regService.getRegForm().controls['Passwords'].controls['confirmPassword'].touched">  
@@ -77,7 +77,7 @@
                 </div>
                 <div *ngIf="role=='TEACHER'" class="additional-info">
                     <div class="mb-3">
-                        <label  for="sel1">Уровень образования</label>
+                        <label  for="sel1"><b>Уровень образования</b></label>
                         <select formControlName="education" class="custom-select" id="sel1" placeholder="Выберите науный степень">  
                             <option  value="SECONDARY_GENERAL_EDUCATION">Среднее общее образование</option>
                             <option  value="SECONDARY_PROFESSIONAL_EDUCATION">Среднее професиональное образование</option>
@@ -85,11 +85,18 @@
                           </select>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputEmail1 mb-3">Расскажите о себе</label>
+                        <label for="exampleInputEmail1 mb-3"><b>Расскажите о себе</b></label>
                         <textarea  formControlName="aboutMe" type="text" class="form-control" id="Input2" rows="5" aria-describedby="emailHelp" placeholder="О себе"></textarea>
                     </div>
                     <div class="example-2 mb-3">
-                        <label for="exampleInputEmail1">Документы и Сертификаты</label>
+                        <label for="exampleInputEmail1"><b>Документы и Сертификаты</b></label>
+                        <p> <i style="font-size:25px;" class="fas fa-plus-circle"></i> Добавить новый раздел</p>
+                        <div class="form-group">
+                            <label  for="sel1">Раздел</label>
+                            <select  class="custom-select" id="sel1" placeholder="Выберите Раздел">  
+                                <option *ngFor="let subject of subjects" value="{{subject.name}}">{{subject.translateName}}</option>  
+                              </select>
+                        </div>
                         <div class="form-group">
                           <input type="file" name="file" id="file"  (change)="handleFileInput($event.target.files)" multiple accept="image/*, application/pdf" class="input-file"/>
                           <label for="file" class="btn btn-tertiary js-labelFile">
