--- a/src/app/allusers/notifications/notifications.component.html
+++ b/src/app/allusers/notifications/notifications.component.html
@@ -42,7 +42,7 @@
 								<img src="https://conquestimaging.com/wp-content/uploads/2018/03/cs.png" alt="profile_pic" style="width:55px">
 							</div>
 							<div class="notify_info">
-								<p>{{not.notification.message}}</p><span>{{not.notification.certificateName.split('_')[1]}}</span>
+								<p>Aдминистратор {{not.notification.message}}  -  {{not.notification.certificateName.split('_')[1]}} </p>
 								<span class="notify_time"></span>
 							</div>
 						</div>
@@ -50,10 +50,8 @@
 						</div>
 					</div>
 						
-				</div>
-				
+				</div>		
 		</div>
-		
 	</div>
 </div>
 
