--- a/src/app/admin/teacher-documents/teacher-documents.component.scss
+++ b/src/app/admin/teacher-documents/teacher-documents.component.scss
@@ -38,6 +38,7 @@ table {
     justify-content:center;
     align-items:center;
     flex-wrap:wrap;
+    flex-direction:column;
   }
 
   .check-button
